<resources>
    <string name="app_name">ATC</string>
    <string name="around_the_corner">Around the corner</string>
    <string name="title_activity_store_list">StoreListActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="my_account">My Account</string>
    <string name="help">Help</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="or">- Or -</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="login_with_google">Login with google</string>
    <string name="with_your_email">With your email</string>
    <string name="password">Password</string>
    <string name="register_with_facebook">Register with facebook</string>
    <string name="register_with_google">Register with google</string>
    <string name="choose_password">Choose password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">1130175903799419</string>
    <string name="fb_login_protocol_scheme">fb1130175903799419</string>
    <string name="google_map_key">AIzaSyA-71QGb4Gm46d9_FpcVJ0-sG0safakjJo</string>
    <string name="signed_in_as">Signed in as</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="re_enter_new_password">Re-enter New Password</string>
    <string name="sign_out">Sign out</string>
    <string name="product">Product</string>
    <string name="products">Products</string>
    <string name="store">Stores</string>
    <string name="favourites">Favorites</string>
    <string name="filter_by_category">Filter by category</string>
    <string name="search_by_product_store">Search for products or stores</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="view_products">View products</string>
    <string name="no_connection_try_again">No connection. Try again!</string>
    <string name="products_category">Product Category</string>
    <string name="similar_products">Similar Products</string>
    <string name="something_went_wrong_try_again">Something went wrong. Try again!</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="forgot_pass">Forgot password</string>
    <string name="please_log_in_to_do_that">Please log in to do that</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="open_until">Open until %s</string>
    <string name="call">Visit</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="category">Category</string>
    <string name="neighbourhood">Neighborhood</string>
    <string name="clear_all">Clear All</string>
    <string name="apply">Apply</string>
    <string name="filters">Filters</string>
    <string name="store_near_you">Stores near you</string>
    <string name="products_near_you">Products near you</string>


</resources>
