<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinate_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:fitsSystemWindows="true"
    tools:context=".ui.home.HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="@dimen/dimen_10dp"
                    android:src="@drawable/ic_keyboard_arrow_left_black_24dp" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="sans-serif"
                    android:letterSpacing="0.02"
                    android:text="@string/register"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_16" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tv_fb_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_40dp"
                android:layout_marginTop="@dimen/dimen_50dp"
                android:layout_marginEnd="@dimen/dimen_40dp"
                android:background="@drawable/button_white_rounded_bg"
                android:paddingStart="@dimen/dimen_10dp"
                android:paddingTop="@dimen/dimen_15dp"
                android:paddingEnd="@dimen/dimen_10dp"
                android:paddingBottom="@dimen/dimen_15dp">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawableStart="@drawable/ic_facebook_icon"
                    android:drawablePadding="@dimen/dimen_10dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/register_with_facebook"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlue"
                    android:textSize="@dimen/font_18" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tv_google_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_40dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:layout_marginEnd="@dimen/dimen_40dp"
                android:background="@drawable/button_white_rounded_bg"
                android:paddingStart="@dimen/dimen_10dp"
                android:paddingTop="@dimen/dimen_15dp"
                android:paddingEnd="@dimen/dimen_10dp"
                android:paddingBottom="@dimen/dimen_15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawableStart="@drawable/ic_google_plus"
                    android:drawablePadding="@dimen/dimen_10dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/register_with_google"
                    android:textAllCaps="false"
                    android:textColor="@color/colorRed"
                    android:textSize="@dimen/font_18" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:fontFamily="sans-serif"
                android:text="@string/or"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_18" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_40dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:layout_marginEnd="@dimen/dimen_40dp"
                android:background="@drawable/button_white_rounded_bg"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:hint="@string/with_your_email"
                android:maxLines="1"
                android:paddingStart="@dimen/dimen_10dp"
                android:paddingTop="@dimen/dimen_15dp"
                android:paddingEnd="@dimen/dimen_10dp"
                android:paddingBottom="@dimen/dimen_15dp"
                android:singleLine="true"
                android:textAllCaps="false"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/font_18" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_40dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:layout_marginEnd="@dimen/dimen_40dp"
                android:background="@drawable/button_white_rounded_bg"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:hint="@string/choose_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="@dimen/dimen_10dp"
                android:paddingTop="@dimen/dimen_15dp"
                android:paddingEnd="@dimen/dimen_10dp"
                android:paddingBottom="@dimen/dimen_15dp"
                android:singleLine="true"
                android:textAllCaps="false"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/font_18" />

            <TextView
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_40dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:layout_marginEnd="@dimen/dimen_40dp"
                android:background="@drawable/button_bg_orange"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:paddingStart="@dimen/dimen_10dp"
                android:paddingTop="@dimen/dimen_15dp"
                android:paddingEnd="@dimen/dimen_10dp"
                android:paddingBottom="@dimen/dimen_15dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_18" />

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>